<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddCommentFragment"
    android:padding="10dp">

    <LinearLayout
        android:id="@+id/linear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.526"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.039"
        android:layout_marginStart="10sp"
        android:layout_marginEnd="10sp">

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView"
            android:layout_width="80sp"
            android:layout_height="80sp"
            android:elevation="12dp"
            app:cardCornerRadius="40dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.039">

            <ImageView
                android:id="@+id/profilePic"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"
                android:src="@drawable/profile" />

        </androidx.cardview.widget.CardView>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:elevation="12dp"
            android:layout_weight="3"
            android:orientation="vertical"
            android:padding="12dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/cardView"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/commentedByName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.3"
                android:fontFamily="@font/spartan"
                android:text="@string/NAME"
                android:textColor="@color/black"
                android:textScaleX="1.2"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/personProfession"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="6sp"
                android:layout_weight="0.7"
                android:fontFamily="@font/spartan"
                android:textColor="@color/black"
                android:textSize="18sp" />

        </LinearLayout>

    </LinearLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/otfAnswerQuestion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/type_your_answer"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/linear"
        app:layout_constraintVertical_bias="0.07"
        app:boxStrokeColor="@color/black"
        app:hintTextColor="@color/black"
        android:layout_marginStart="10sp"
        android:layout_marginEnd="10sp"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/answerText"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:fontFamily="@font/spartan"
            android:gravity="top"
            android:inputType="textMultiLine"
            android:overScrollMode="always"
            android:paddingStart="15dp"
            android:textColor="@color/black"
            android:textSize="18sp"
               />

    </com.google.android.material.textfield.TextInputLayout>

    <ImageView
        android:id="@+id/imageAnswer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@+id/otfAnswerQuestion"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="50sp"
        />

    <ImageView
        android:id="@+id/addAnswerPhoto"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginTop="200sp"
        android:layout_marginEnd="10sp"
        android:src="@drawable/ic_baseline_add_a_photo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/addCommentBtn"
        app:layout_constraintVertical_bias="0" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/addCommentBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_marginTop="70sp"
        android:layout_weight="0"
        android:background="@drawable/mybutton"
        android:backgroundTint="@color/blue_shade"
        android:fontFamily="@font/spartan"
        android:padding="10sp"
        android:text="@string/add_comment"
        android:textAllCaps="false"
        android:textColor="@color/white_two"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.961"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

</androidx.constraintlayout.widget.ConstraintLayout>